test: updating to listOf